<resources>
    <string name="app_name">TeRex</string>
    <string name="title_brand">TeRex Time Tracing</string>
    <string name="title_home">Home</string>
    <string name="title_admin">Administration</string>
    <string name="title_timesheets">Timelister</string>
    <string name="title_timesheet">Timeliste</string>
    <string name="title_timesheet_entries">Timelisteoppføring</string>
    <string name="title_register_work">Registrer arbeid</string>
    <string name="title_invoices">Faktura</string>
    <string name="title_invoice">Faktura</string>
    <string name="title_project">Prosjekt</string>
    <string name="title_timesheet_calendar">Timeliste kalender</string>
    <string name="title_timesheet_new">Ny timeliste</string>
    <string name="title_invoice_attachment">Faktura vedlegg</string>
    <string name="title_settings">Instillinger</string>
    <string name="title_integrations">Integrations</string>
    <string name="lbl_description">Beskrivelse</string>
    <string name="lbl_timesheet">Timeliste</string>
    <string name="lbl_invoice">Faltura</string>
    <string name="lbl_client">Klient</string>
    <string name="lbl_title">Tittel</string>
    <string name="lbl_project">Prosjekt</string>
    <string name="lbl_hourly_rate">Timepris</string>
    <string name="lbl_from_date_time">Fra</string>
    <string name="lbl_to_date_time">Til</string>
    <string name="lbl_break">Pause</string>
    <string name="lbl_status">Status</string>
    <string name="lbl_comment">Kommentar</string>
    <string name="lbl_system">System</string>
    <string name="lbl_username">Brukernavn</string>
    <string name="lbl_password">Passord</string>
    <string name="lbl_url">Url</string>
    <string name="lbl_project_name">Prosjket navn</string>
    <string name="lbl_timesheet_name">Timeliste navn</string>
    <string name="lbl_worked_days">Arbeided dager</string>
    <string name="lbl_worked_hours">Arbeided timer</string>
    <string name="lbl_of">av</string>
    <string name="lbl_export_to_pdf">Eksport til pdf</string>
    <string name="lbl_required">obligatorisk</string>
    <string name="btn_save">Lagre</string>
    <string name="btn_cancel">Avbryt</string>
    <string name="btn_add">Legg til</string>
    <string name="btn_back">Tilbake</string>
    <string name="btn_create">Opprett</string>
    <string name="btn_calendar">Kalender</string>
    <string name="btn_email">Send epost</string>
    <string name="btn_view">Vis</string>
    <string name="btn_ok">OK</string>
    <string name="msg_delete_timesheet">Delete timesheet. Note that all registered hours will also be deleted. It is not possible to revert the deletion.</string>
    <string name="msg_confirm_delete">Bekreft sletting av timeliste.</string>
    <string name="msg_delete_timesheet_entry">Delete timesheet entry. It is not possible to revert the deletion.</string>
    <string name="msg_confirm_delete_timesheet_entry">Bekreft sletting av timeliste oppføring.</string>
    <string name="lbl_company_name">Firma</string>
    <string name="lbl_business_address">Forretningsadresse</string>
    <string name="lbl_organization_number">Organisasjonsnummer</string>
    <string name="lbl_bank_account_number">Bankonto</string>
    <string name="lbl_invoice_reference">Fakturareferanse</string>
    <string name="lbl_invoice_number">Fakturanummer</string>
    <string name="lbl_client_name">Kunde</string>
    <string name="lbl_client_address">Adresse</string>
    <string name="lbl_client_phone_number">Telefon</string>
    <string name="lbl_client_organization_number">Organisasjonsnummer</string>
    <string name="lbl_invoice_project_code">Prosjektkode</string>
    <string name="lbl_client_contact_person">Kontaktperson</string>
    <string name="lbl_billing_date">Fakturadato</string>
    <string name="lbl_billed_amount">Beløp</string>
    <string name="txt_colon">:</string>
    <string name="txt_empty" />
    <string name="lbl_workday_date">Dato</string>
    <string name="lbl_to_time">Til klokkeslett</string>
    <string name="lbl_from_time">Fra klokkeslett</string>
    <string name="lbl_from_date">Fra dato</string>
    <string name="lbl_to_date">Til dato</string>
    <string name="lbl_year">År</string>
    <string name="lbl_month">Måned</string>
    <string name="lbl_day">Dag</string>
    <string name="hh_mm">HH:mm</string>
    <string name="dd_mm_yyyy">dd-MM-yyyy</string>
    <string name="btn_delete">Slett</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_select_from_time">Velg fra tid</string>
    <string name="title_select_to_time">Velg til tid</string>
    <string name="title_select_workday_date">Velg arbeidsdag dato</string>
    <string name="prompt_created_date">Opprettet dato</string>
    <string name="prompt_last_modified_date">Endret dato</string>
    <string name="prompt_client">Klient</string>
    <string name="prompt_project">Prosjekt</string>
    <string name="info_timesheet_list_added_entry" formatted="false">Lagt til ny oppføring på timeliste</string>
    <string name="info_timesheet_list_updated_entry" formatted="false">Oppdatert timeliste oppføring</string>
    <string name="info_timesheet_list_deleted_entry" formatted="false">Slettet oppføring fra timeliste</string>
    <string name="info_timesheet_list_add_msg_format" formatted="false">Added %s, %s</string>
    <string name="info_timesheet_list_saved_msg_format" formatted="false">Saved %s, %s</string>
    <string name="info_timesheet_list_update_msg_format" formatted="false">Updated %s, %s</string>
    <string name="info_timesheet_list_delete_msg_format" formatted="false">Deleted %s</string>
    <string name="material_calendar_monday">Man</string>
    <string name="material_calendar_tuesday">Tir</string>
    <string name="material_calendar_wednesday">Ons</string>
    <string name="material_calendar_thursday">Tor</string>
    <string name="material_calendar_friday">Fre</string>
    <string name="material_calendar_saturday">Lør</string>
    <string name="material_calendar_sunday">Søn</string>
    <string name="lbl_invoice_attachment">Faktura vedlegg</string>
    <string name="prompt_description">Beskrivelse</string>
    <string name="messages_header">Melding</string>
    <string name="title_history">Historie</string>
    <string name="timesheet_status_billed">Fakturert</string>
    <string name="timesheet_status_completed">Utført</string>
    <string name="timesheet_status_active">Aktive</string>
    <string name="timesheet_status_new">Ny</string>
    <string name="title_timesheet_summary">Timeliste oppsummering</string>
    <string name="title_client_new">New Client</string>
    <string name="btn_search">Search</string>
    <string name="btn_lookup">Lookup</string>
    <string name="lbl_organization_name">Organization name</string>
    <string name="lbl_organization_address">Organization business address</string>
    <string name="lbl_organization_postal_code">Postal code</string>
    <string name="lbl_postal_code">Postal code</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_city">City</string>
    <string name="lbl_country">Country</string>
    <string name="lbl_person_full_name">person full name</string>
    <string name="lbl_mobile_number">Mobile number</string>
    <string name="lbl_email_address">Email address</string>
    <string name="lbl_org_contact_info_mobile_number">Organization mobile</string>
    <string name="lbl_orog_contact_email_address">Organization email</string>
    <string name="lbl_org_contact_email_address">Organization email</string>
    <string name="lbl_contact_person_email">Contact person email</string>
    <string name="lbl_contact_person_mobile">Contact person mobile</string>
    <string name="lbl_contact_person_full_name">Contact person full name</string>
    <string name="msg_delete_client">verify delete client</string>
    <string name="info_client_saved_msg_format">saved client, orgNumber=%s, orgName=%s</string>
    <string name="title_clients">Clients</string>
    <string name="title_projects">Projects</string>
    <string name="title_project_new">New Project</string>
    <string name="info_user_account_saved_msg_format">Saved user account, username=%s</string>
    <string name="lbl_user_account">User account</string>
    <string name="lbl_user_account_type">User account type</string>
    <string name="title_user_account">User account</string>
    <string name="title_client_details">Client Details</string>
    <string name="title_timesheet_details">Timesheet Details</string>
    <string name="title_timesheet_entry_details">Timesheet Entry Details</string>
    <string name="title_timesheet_entry_new">New timesheet entry</string>
    <string name="title_invoice_new">New invoice</string>
    <string name="title_invoice_details">Invoice details</string>
    <string name="timesheet_entry_type_regular">Regular</string>
    <string name="timesheet_entry_type_vacation">Vacation</string>
    <string name="timesheet_entry_type_sick">Syk</string>
    <string name="btn_add_regular">Regular</string>
    <string name="btn_add_vacation">Ferie</string>
    <string name="btn_add_sick">Syk</string>
    <string name="lbl_vacation">Ferie</string>
    <string name="lbl_sick">Fravær</string>
    <string name="lbl_regular_workday">Arbeidsdag</string>
    <string name="lbl_integrations">Integrations</string>
    <string name="btn_import">Import</string>
    <string name="lbl_send_email">Send email</string>
    <string name="project_status_active">Active</string>
    <string name="project_status_closed">Closed</string>
    <string name="lbl_invoice_email_address">Invoice email address</string>
    <string name="title_integration_details">Integration details</string>
    <string name="lbl_integration_system">System</string>
    <string name="lbl_base_url">Base url</string>
    <string name="lbl_authentication_type">Authentication type</string>
    <string name="integration_status_active">Active</string>
    <string name="integration_status_disabled">Disabled</string>
    <string name="integration_status_deactivated">Deactivated</string>
    <string name="lbl_integration_service_type">Service type</string>
    <string name="integration_type_file">File</string>
    <string name="integration_type_web_service">WebService</string>
    <string name="integration_type_rest">REST</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_accounting">Accounting</string>
    <string name="lbl_end_date">End date</string>
    <string name="lbl_start_date">Start date</string>
    <string name="lbl_is_default_user">Er standard bruker</string>
</resources>