<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/timesheet_action_bar_menu">
        <item
            android:id="@+id/app_bar_timesheet_list"
            android:title="@string/title_timesheets"
            app:icon="@drawable/baseline_punch_clock_black_48"
            app:showAsAction="always" />
        <item
            android:id="@+id/app_bar_invoice_list"
            android:title="@string/title_invoices"
            app:icon="@drawable/baseline_article_black_48"
            app:showAsAction="always" />
        <item
            android:id="@+id/app_bar_client_list"
            android:title="@string/title_clients"
            app:icon="@drawable/baseline_groups_48"
            app:showAsAction="always" />
        <item
            android:id="@+id/app_bar_history_list"
            android:title="@string/title_history"
            app:icon="@drawable/baseline_work_history_black_48"
            app:showAsAction="always" />
    </group>
</menu>