<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.TimesheetRegisterWorkFragment"
    tools:ignore="ExtraText">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/timesheet_entity_id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text=""
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/timesheet_register_work_section_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/title_register_work"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorSection" />

        <TableLayout
            android:id="@+id/timesheet_register_work_tbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timesheet_register_work_section_header"
            android:stretchColumns="0,1">

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/lbl_client"
                    android:labelFor="@+id/timesheet_client_spinner"/>

                <Spinner
                    android:id="@+id/timesheet_client_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:padding="3dip" />
            </TableRow>

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/lbl_project"
                    android:labelFor="@+id/timesheet_project_spinner"/>

                <Spinner
                    android:id="@+id/timesheet_project_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:padding="3dip" />
            </TableRow>

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/lbl_hourly_rate"
                    android:labelFor="@+id/timesheet_hourly_rate"/>

                <EditText
                    android:id="@+id/timesheet_hourly_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:padding="3dip"
                    android:maxLength="4"
                    android:inputType="number"
                    android:autofillHints="" />
            </TableRow>

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/lbl_workday_date"
                    android:labelFor="@+id/timesheet_workday_date"/>

                <EditText
                    android:id="@+id/timesheet_workday_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:inputType="date"
                    android:text="@string/dd_mm_yyyy"
                    android:autofillHints="" />
            </TableRow>

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/lbl_from_time"
                    android:labelFor="@+id/timesheet_from_time"/>

                <EditText
                    android:id="@+id/timesheet_from_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:inputType="time"
                    android:text="@string/hh_mm"
                    android:maxLength="5"
                    android:autofillHints="" />
            </TableRow>

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/lbl_to_time"
                    android:labelFor="@+id/timesheet_to_time"/>

                <EditText
                    android:id="@+id/timesheet_to_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:inputType="time"
                    android:text="@string/hh_mm"
                    android:maxLength="5"
                    android:autofillHints="" />
            </TableRow>
            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/lbl_break"
                    android:labelFor="@+id/timesheet_break"/>

                <EditText
                    android:id="@+id/timesheet_break"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:padding="3dip"
                    android:inputType="number"
                    android:autofillHints="" />
            </TableRow>

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/lbl_worked_hours"
                    android:labelFor="@+id/timesheet_worked_hours"/>

                <TextView
                    android:id="@+id/timesheet_worked_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:padding="3dip"
                    android:maxLength="4"
                    android:enabled="false"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/lbl_status"
                    android:labelFor="@+id/timesheet_statuses_spinner"/>

                <Spinner
                    android:id="@+id/timesheet_statuses_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:padding="3dip" />
            </TableRow>

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/lbl_comment"
                    android:labelFor="@+id/timesheet_comment"/>

                <TextView
                    android:id="@+id/timesheet_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:padding="3dip"
                    android:maxLength="50" />
            </TableRow>
        </TableLayout>

        <RelativeLayout
            android:id="@+id/tbl_timesheet_register_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timesheet_register_work_tbl"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btn_timesheet_register_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="5dp"
                android:drawableStart="@android:drawable/ic_menu_save"
                android:text="@string/btn_save"
                android:textAllCaps="false"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_timesheet_register_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@id/btn_timesheet_register_save"
                android:drawableStart="@android:drawable/ic_menu_delete"
                android:text="@string/btn_delete"
                android:textAllCaps="false"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_timesheet_register_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@id/btn_timesheet_register_delete"
                android:drawableStart="@android:drawable/ic_menu_close_clear_cancel"
                android:text="@string/btn_cancel"
                android:textAllCaps="false"
                android:textSize="14sp" />
        </RelativeLayout>

    </RelativeLayout>
</FrameLayout>