<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/baseline_settings_applications_black_24dp"
            android:title="@string/title_admin" />

        <item
            android:id="@+id/nav_timesheet_list"
            android:icon="@drawable/baseline_settings_applications_black_24dp"
            android:title="@string/title_timesheets" />
<!--
        <item
            android:id="@+id/nav_timesheet_new"
            android:icon="@drawable/baseline_settings_applications_black_24dp"
            android:title="@string/title_timesheet_new" />
-->
<!--
        <item
            android:id="@+id/nav_timesheet_register_work"
            android:icon="@drawable/baseline_settings_applications_black_24dp"
            android:title="@string/title_register_work" />
-->
        <item
            android:id="@+id/nav_invoice_list"
            android:icon="@drawable/baseline_settings_applications_black_24dp"
            android:title="@string/title_invoices" />

<!--
        <item
            android:id="@+id/nav_invoice"
            android:icon="@drawable/baseline_settings_applications_black_24dp"
            android:title="@string/title_invoice" />

        <item
            android:id="@+id/nav_timesheet_calendar"
            android:icon="@drawable/baseline_settings_applications_black_24dp"
            android:title="@string/title_timesheet_calendar" />
-->
    </group>

</menu>